2007-10-01  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Remove leading dot from system copy of config files.
	* Portability fixes (freebsd, amd64).
	* tilde.[ch] and history.[ch] were not getting included
	  when needed. Autotools weirdness, I suspect gnulib.
	  Moved them back to src/ and now use them unconditionally.

2007-09-30  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* add --enable-debian flag to set defaults
	  for debian (sensible-browser, etc).
	* merged debian manpages (gitps, gitview, gitwipe, etc) upstream.
	* merged Bruce Sass's patches for manipulating .deb files
	* Updated RPM spec file. Warning: untested.
	* Remove CVS $Id$ tags as we are now using git.

2007-09-29  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* renamed package to gnu-interactive-tools.
	* added missing tty_end_cursorapp() calls.
	* dont wrap tty mode in tty_{start,end}cursorapp(), it leaves
	  the cursor bold when we exit in xterm.
	* src/panel.c(panel_compare_files): handle special files.

2007-09-28  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* updated config.{guess,sub}.
	* added .gitignore (that's git the vcs).

2006-10-21  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* src/tty.c(tty_put/get_screen): fix to work with > 8 vcs.
	* use ti/te codes which save/restore screen under xterm.

2006-10-19  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* added setlocale calls to gitps and gitview.
	* set version to 4.9.1.
	* converted all .gitrc to .gitrc.*.in to pick up version in comment.
	* replaced xid.c with gnulib idcache.

2006-10-18  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* check if copy/mv/rm/command aborted by signal.
	* removed -traditional from warning flags.
	* fixed remaining warnings in src/.

2006-10-17  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* src/title.c: added mail checking to title.

2006-10-16  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* src/git.c: Initial setlocale support.
	* add rxvt-unicode to color xterms.

2006-10-07  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
