@@ -715,7 +715,7 @@ F10	= exit
 ^X^X	= exchange-point-and-mark
 ^XG	= RECURSIVE-GREP; gitrgrep %s{Search: ,} '%s{Files to be searched: ,*}' | $GIT_PAGER;;;y
 ^Xg	= GREP; grep %s{Search: ,} %i | $GIT_PAGER;;;y
-^Xh	= HTML; "$GIT_BROWSER" @prefix@/doc/gnu-interactive-tools/git.html;;n
+^Xh	= HTML; "$GIT_BROWSER" @htmldir@/git.html;;n
 ^XH	= XHOST; xhost %s{Hosts: ,+ };;;;y
 ^XI	= ISPELL; ispell %f;;n
 ^Xi	= INFO; info %s{Info documentation: ,}
