@@ -1,3 +1,9 @@
+2007-10-03  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
+
+	* Manually expand variables in gitrc.common.IN
+	  (sed in Makefile.am), otherwise they get expanded to (eg)
+	  $(prefix)/share/doc/gnu-interactive-tools.
+
 2007-10-01  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
 
 	* Remove leading dot from system copy of config files.
